# portcullis

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/scripts/: check_version.py
.github/workflows/: ci.yml  publish.yml
demo/: run_cli.py  run_langgraph.py  tools.py
demo/web/: index.html
src/portcullis/: __init__.py
src/portcullis/adapters/: __init__.py  langgraph.py
src/portcullis/core/: __init__.py  approval.py  audit.py  engine.py  model.py  policy.py
tests/: test_core.py
