[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portcullis"
version = "0.1.0"
description = "A per-action autonomy policy layer for AI agents: decide what an agent may do on its own, based on an action's reversibility and blast radius rather than the model's capability."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sameer Bhatt" }]
keywords = ["agents", "llm", "langgraph", "langchain", "governance", "autonomy", "human-in-the-loop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    # Spelled out so the supported-versions badge and the PyPI sidebar match
    # what CI actually runs, rather than being inferred from requires-python.
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []  # core is intentionally dependency-free

[project.optional-dependencies]
langgraph = ["langgraph>=0.2", "langchain-core>=0.3"]
demo = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/sameerbhatt/portcullis"
Repository = "https://github.com/sameerbhatt/portcullis"
Issues = "https://github.com/sameerbhatt/portcullis/issues"
Changelog = "https://github.com/sameerbhatt/portcullis/releases"

[tool.setuptools.packages.find]
where = ["src"]

# PEP 561: without this marker shipped inside the wheel, type checkers ignore
# the annotations in an installed copy of the package, however thoroughly the
# source is hinted.
[tool.setuptools.package-data]
portcullis = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
